version/0.16/_sources/api/solver/_autosummary/settings/boundaries.rst.txt
:orphan:

.. _boundaries:

boundaries
==========

.. autoclass:: ansys.fluent.core.solver.settings_232.boundaries.boundaries
    :show-inheritance:

.. rubric:: Methods

========================================   ==============================

Method                                                            Summary

========================================   ==============================
:ref:`list <list>`                                        'list' command.

:ref:`list_properties <list_properties>`       'list_properties' command.

:ref:`duplicate <duplicate>`                         'duplicate' command.

========================================   ==============================

.. rubric:: Named object type

:ref:`boundaries_child <boundaries_child>`


.. rubric:: Included in:

====================================   ===================================

Parent                                                             Summary

====================================   ===================================
:ref:`volumes_child <volumes_child>`       'child_object_type' of volumes.

====================================   ===================================

