version/0.20/_sources/api/solver/_autosummary/settings/boundaries.rst.txt
:orphan:

.. _boundaries:

boundaries
==========

.. autoclass:: ansys.fluent.core.solver.settings_241.boundaries.boundaries
    :show-inheritance:

.. rubric:: Methods

==========================================   =========================================

Method                                                                         Summary

==========================================   =========================================
:ref:`delete <delete_1>`                                      Delete selected objects.

:ref:`list <list>`                                      List the names of the objects.

:ref:`list_properties <list_properties_1>`       List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                          Create a copy of the object.

==========================================   =========================================

.. rubric:: Named object type

:ref:`boundaries_child <boundaries_child>`


.. rubric:: Included in:

====================================   ===================================

Parent                                                             Summary

====================================   ===================================
:ref:`volumes_child <volumes_child>`       'child_object_type' of volumes.

====================================   ===================================

